--- a/Src/KMWeb/Web.config
+++ b/Src/KMWeb/Web.config
@@ -8,7 +8,7 @@
 <configuration>
   <connectionStrings>
     <add name="ApplicationServices"
-         connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=E:\GitHub\src\KMWeb\App_Data\KMDatabase.mdf;Integrated Security=True;User Instance=True"
+         connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=E:\GitHub\km-2013-projects-team-zelengora\Src\KMWeb\App_Data\KMDatabase.mdf;Integrated Security=True;User Instance=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 
