--- a/Src/KMWeb/KMWeb.csproj
+++ b/Src/KMWeb/KMWeb.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutofacContrib.SolrNet">
+      <HintPath>..\packages\SolrNet-0.4.0.2002\unmerged\AutofacContrib.SolrNet.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Facilities.SolrNetIntegration">
+      <HintPath>..\packages\SolrNet-0.4.0.2002\unmerged\Castle.Facilities.SolrNetIntegration.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
@@ -40,6 +46,22 @@
       <HintPath>..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate.SolrNet">
+      <HintPath>..\packages\SolrNet-0.4.0.2002\unmerged\NHibernate.SolrNet.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Integration.SolrNet">
+      <HintPath>..\packages\SolrNet-0.4.0.2002\unmerged\Ninject.Integration.SolrNet.dll</HintPath>
+    </Reference>
+    <Reference Include="SolrNet, Version=0.4.0.2002, Culture=neutral, PublicKeyToken=bc21753e8aa334cb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\SolrNet-0.4.0.2002\SolrNet.dll</HintPath>
+    </Reference>
+    <Reference Include="StructureMap.SolrNetIntegration">
+      <HintPath>..\packages\SolrNet-0.4.0.2002\unmerged\StructureMap.SolrNetIntegration.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
@@ -56,6 +78,9 @@
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="Unity.SolrNetIntegration">
+      <HintPath>..\packages\SolrNet-0.4.0.2002\unmerged\Unity.SolrNetIntegration.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
@@ -201,6 +226,9 @@
   <ItemGroup>
     <Content Include="Account\Web.config" />
     <Content Include="Site.Master" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="SolrNet.chm" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
