--- a/Src/KMWeb/packages.config
+++ b/Src/KMWeb/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
+  <package id="SolrNet" version="0.4.0-beta2" targetFramework="net40" />
 </packages>
