Commit Search modul V1
Postravljene osnovne funkcije za pretragu u Solr indexu. Moguce je
napraviti pretragu "rijeci" u indexiranim clancim.

--- a/Src/KMWeb/KMWeb.csproj
+++ b/Src/KMWeb/KMWeb.csproj
@@ -46,8 +46,9 @@
       <HintPath>..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Practices.ServiceLocation">
-      <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\CommonServiceLocator\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate.SolrNet">
       <HintPath>..\packages\SolrNet-0.4.0.2002\unmerged\NHibernate.SolrNet.dll</HintPath>
