--- a/Src/KMWeb/Web.config
+++ b/Src/KMWeb/Web.config
@@ -7,8 +7,11 @@
 
 <configuration>
   <connectionStrings>
-    <add name="ApplicationServices"
+   <!-- <add name="ApplicationServices"
          connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=E:\GitHub\km-2013-projects-team-zelengora\Src\KMWeb\App_Data\KMDatabase.mdf;Integrated Security=True;User Instance=True"
+         providerName="System.Data.SqlClient" />-->
+    <add name="ApplicationServices"
+         connectionString="Data Source=MOBILE-PC\SQLEXPRESS;Initial Catalog=KMDatabaseMain;User Id=sa; Password=as;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 
@@ -45,7 +48,11 @@
     </roleManager>
 
   </system.web>
-
+  <system.net>
+    <settings>
+      <httpWebRequest useUnsafeHeaderParsing="true" />
+    </settings>
+  </system.net>
   <system.webServer>
      <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
