--- a/Src/KMWeb/Web.config
+++ b/Src/KMWeb/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -10,9 +10,7 @@
    <!-- <add name="ApplicationServices"
          connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=E:\GitHub\km-2013-projects-team-zelengora\Src\KMWeb\App_Data\KMDatabase.mdf;Integrated Security=True;User Instance=True"
          providerName="System.Data.SqlClient" />-->
-    <add name="ApplicationServices"
-         connectionString="Data Source=MOBILE-PC\SQLEXPRESS;Initial Catalog=KMDatabaseMain;User Id=sa; Password=as;"
-         providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="Data Source=MOBILE-PC\SQLEXPRESS;Initial Catalog=KMDatabaseMain;User Id=sa; Password=as;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
@@ -24,24 +22,21 @@
 
     <membership>
       <providers>
-        <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices"
-             enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
-             maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
-             applicationName="/" />
+        <clear />
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
 
     <profile>
       <providers>
-        <clear/>
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
+        <clear />
+        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
 
     <roleManager enabled="false">
       <providers>
-        <clear/>
+        <clear />
         <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
         <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
       </providers>
@@ -54,6 +49,18 @@
     </settings>
   </system.net>
   <system.webServer>
-     <modules runAllManagedModulesForAllRequests="true"/>
+     <modules runAllManagedModulesForAllRequests="true" />
+        <defaultDocument>
+            <files>
+                <clear />
+                <add value="default.aspx" />
+                <add value="Default.htm" />
+                <add value="Default.asp" />
+                <add value="index.htm" />
+                <add value="index.html" />
+                <add value="iisstart.htm" />
+               
+            </files>
+        </defaultDocument>
   </system.webServer>
 </configuration>
